Bug 890443 - [SMS] the "fixed header" style and transitions should be adjusted so that it's not jumping when changing header r=schung
Important changes
* changes how the fixed header is found. Now we're iterating starting with the
  top instead of the bottom. In the SMS app, the most common cases is when the
  list is not scrolled so much, and therefore starting at the top will likely be
  way faster once the list is long.
* we don't position the header in the same loop, now we position the header
  depending on the next header, if it exists.
* we use a specific hiding class instead of specifying the 100% transform
  translation in the js code. Also, using a 100% transform translation is used
  instead of display none, so that we can get some necessary measurements in the
  init method. Most notably, we need to take into account the view's padding
  top.

Less important changes:
* changed the desktop mock so that we have more headers when loading in Firefox
* check that we have mozSetMessageHandler before using it so that we can launch
  the app in main Firefox
* moved the first header's margin top to the view's padding top. This makes it
  easier to calculate the exact location to trigger the fixed header switch
  effect.

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -72,7 +72,7 @@ form[role="dialog"][data-type="edit"] header menu[type="toolbar"] button {
 
 /* Override Building Block [Lists] styles */
 [data-type="list"] {
-  padding: 0;
+  padding: 0.7rem 0 0 0;
   text-align: left;
 }
 
@@ -94,11 +94,6 @@ form[role="dialog"][data-type="edit"] header menu[type="toolbar"] button {
 
 [data-type="list"] header {
   margin: 0 1.5rem;
-  padding: 0.5rem 1.5rem;
-}
-
-[data-type="list"] header:first-child {
-  padding-top: 1.2rem;
 }
 
 #threads-container[data-type="list"] ul {
@@ -317,6 +312,7 @@ section.has-carrier .article-list header:first-child {
   border-bottom-color: transparent;
   border-bottom-style: solid;
   -moz-box-sizing: border-box;
+  padding: 0;
 
   background: none repeat scroll 0 0 #E4E4E4;
   text-align: left;
@@ -667,22 +663,28 @@ form.bottom[role="search"].messages-compose-form {
 */
 .fixed-title {
   position: absolute;
+  z-index: 4;
   top: 5rem;
-  width: calc(100% - 6rem);
-  padding: 1.5rem 1.5rem 0.5rem;
+
+  width: calc(100% - 5rem);
+  height: 1.8rem;
+  padding: 1.2rem 1rem 0.5rem;
   margin: 0 1.5rem;
   border-bottom: solid 0.1rem #ff4e00;
+
   background-repeat: no-repeat;
   background-color: #FFFFFF;
-  transform: translateY(-3rem);
+  color: #FF4E00;
   pointer-events: none;
   text-align: left;
   text-transform: uppercase;
   font-size: 1.6rem;
   font-weight: normal;
   line-height: 1.8rem;
-  color: #FF4E00;
-  z-index: 4;
+}
+
+.fixed-title.no-fixed-header {
+  transform: translateY(-100%);
 }
 
 /*
